Added missing opportunity tests

--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1376,8 +1376,15 @@ components:
       properties:
         name:
           type: string
+        projectCode:
+          type: string
+        clientCode:
+          type: string
         priority:
           type: string
+        openingDate:
+          type: string
+          format: date
         closingDate:
           type: string
           format: date
