Project + Client tests + fixes

--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1419,6 +1419,8 @@ components:
         - industry
         - country
         - offices
+        - HQ
+        - principalOffice
       properties:
         code:
           type: string
