Skill + Team tests + fixes

--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1313,13 +1313,13 @@ components:
       required:
         - code
         - type
-        - subSkill
+        - subSkills
       properties:
         code:
           type: string
         name:
           type: string
-        subSkill:
+        subSkills:
           type: array
           items:
             $ref: "#/components/schemas/skill"
