--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=neo4j
+logging.level.org.springframework.data.neo4j=DEBUG
+management.endpoints.web.exposure.include=*
