Fix Update for Immutables

--- a/src/main/resources/api/skill-tree-api.yml
+++ b/src/main/resources/api/skill-tree-api.yml
@@ -1487,6 +1487,15 @@ components:
       properties:
         code:
           type: string
+        introductionDate:
+          type: string
+          format: date
+        resolutionDate:
+          type: string
+          format: date
+        status:
+          type: string
+          enum: [INTERVIEWED, PRESENTED, OK, KO]
         candidateCode:
           type: string
         opportunityCode:
